[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Tilesets/beachdoor.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/Objects/EntryRoomDoor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 64 )

[node name="EntryDoor" type="Node2D"]
script = ExtResource( 2 )

[node name="DoorSprite" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="DoorArea" type="Area2D" parent="."]

[node name="DoorCollision" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 192, 256 )
shape = SubResource( 1 )

[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_DoorArea_body_exited"]
